--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,18 @@ android/app/build/
 
 # Expo Router
 .expo/types/router/
+
+# Node dependencies
+node_modules
+
+# Expo
+.expo/
+*.jks
+*.p12
+*.keystore
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment variables
+.env
