--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "base-64": "^1.0.0",
     "expo": "~54.0.0",
-    "expo-camera": "^17.0.8",
+    "expo-camera": "~17.0.8",
+    "expo-file-system": "~19.0.17",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "~19.0.0",
     "expo-sensors": "~15.0.7",
@@ -23,10 +26,14 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-svg": "15.12.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0"
+    "@babel/core": "^7.26.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   },
   "private": true
 }
