--- a/package.json
+++ b/package.json
@@ -11,29 +11,39 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@supabase/supabase-js": "^2.39.0",
+    "astronomy-engine": "^2.1.19",
     "base-64": "^1.0.0",
     "expo": "~54.0.0",
     "expo-camera": "~17.0.8",
     "expo-file-system": "~19.0.17",
+    "expo-gl": "~16.0.7",
     "expo-linear-gradient": "^15.0.7",
     "expo-location": "~19.0.0",
+    "expo-notifications": "^0.32.12",
     "expo-sensors": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "geomagnetism": "^0.2.0",
+    "gl-matrix": "^3.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
